Fix: spacing for hover and color bacgroung item

--- a/.config/eww/scss/side-bar.scss
+++ b/.config/eww/scss/side-bar.scss
@@ -18,6 +18,9 @@
   }
 }
 
+.tes {
+  border: 1px solid red;
+}
 /* TopSide */
 
 .power-vert {
@@ -63,7 +66,7 @@
 /* BottomSide */
 
 .background-item {
-    background-color: mix($color0, $foreground, 90%);
+    background-color: mix($color0, $foreground, 95%);
     padding: 5px 3px;
     border-radius: 5px;
 }
